--- a/index.html
+++ b/index.html
@@ -321,11 +321,11 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="member">
-              <div class="pic"><img src="assets/img/team-2.jpg" alt=""></div>
+              <div class="pic"><img src="assets/img/snygging.png" alt=""></div>
               <div class="details">
-                <h4>name</h4>
-                <span>age</span>
-                <span style="font-size: 1em ;">Role</span>
+                <h4>William Olsson</h4>
+                <span style="font-size: 1em ;">Board of directors</span>
+                <span>18</span>
                 <div class="social">
                   <a href="/assets/404page/404.html"><i class="bi bi-twitter"></i></a>
                   <a href="/assets/404page/404.html"><i class="bi bi-facebook"></i></a>
